--- a/Phase_B/gptalk-frontend/src/app/pages/home/home.component.html
+++ b/Phase_B/gptalk-frontend/src/app/pages/home/home.component.html
@@ -12,10 +12,10 @@
         </div>
       </div>
       <div class="stat-block">
-        <img src="assets/profile/challanges-completed.png" alt="challenges" style="width: 4rem;">
+        <img src="assets/profile/lesson-completed.png" alt="lessons" style="width: 4rem;">
         <div>
-          <small>Challenges Completed</small>
-          <p>{{ myProfile.challengesCompleted }}</p>
+          <small>Lessons Completed</small>
+          <p>{{ myProfile.lessonsCompleted }}</p>
         </div>
       </div>
       <div class="stat-block">
