--- a/Phase_B/gptalk-frontend/src/app/pages/my-profile/my-profile.component.html
+++ b/Phase_B/gptalk-frontend/src/app/pages/my-profile/my-profile.component.html
@@ -5,7 +5,7 @@
 	></app-profile-details>
 	<app-profile-statistics
 		[streak]="myProfile.streak"
-		[challenges]="myProfile.challengesCompleted"
+		[lessons]="myProfile.lessonsCompleted"
 		[exp]="myProfile.totalExp"
 		class="profile__statistics grid-block"
 	></app-profile-statistics>
