--- a/Phase_B/gptalk-frontend/src/app/pages/my-profile/components/profile-statistics/profile-statistics.component.html
+++ b/Phase_B/gptalk-frontend/src/app/pages/my-profile/components/profile-statistics/profile-statistics.component.html
@@ -9,10 +9,10 @@
       </div>
     </div>
     <div class="stat-block">
-      <img src="assets/profile/challanges-completed.png" alt="challenges" style="width: 6rem;">
+      <img src="assets/profile/lessons-completed.png" alt="lessons" style="width: 6rem;">
       <div>
-        <small>Challenges Completed</small>
-        <p>{{ challenges() }}</p>
+        <small>Lessons Completed</small>
+        <p>{{ lessons() }}</p>
       </div>
     </div>
     <div class="stat-block">
