Replaced software logo in about page Added contact email

--- a/Phase_B/gptalk-frontend/src/app/pages/about/about.component.html
+++ b/Phase_B/gptalk-frontend/src/app/pages/about/about.component.html
@@ -34,6 +34,7 @@
     </div>
 
     <p>Ready to level up your language skills? Start your adventure with GPTalk today!</p>
+    <p>Contact us: <a href="mailto: app.gptalk@gmail.com" style="color: var(--primary-clr);">app.gptalk&#64;gmail.com</a></p>
 
     <img src="assets/GPTalk_Logo3_no_text.svg" alt="" />
     <p>2024 GPTalk Inc. All rights reserved.</p>
