--- a/Phase_B/gptalk-frontend/src/app/pages/my-profile/components/profile-details/profile-details.component.html
+++ b/Phase_B/gptalk-frontend/src/app/pages/my-profile/components/profile-details/profile-details.component.html
@@ -20,10 +20,15 @@
 					<p>{{ profile().createdAt | sinceDate }}</p>
 				</div>
 
-				<!-- <div class="globe info">
+        <div class="globe info mt-4">
 					<i class="pi pi-globe"></i>
-					<p>{{ profile().country | titlecase }}</p>
-				</div> -->
+            <p>Top Language:</p>
+				</div>
+        <div class="flex-row">
+          <p class="text-xl">{{ profile().languages[0].language | titlecase }}</p>
+          <p>Rank: {{profile().languages[0].rank}}</p>
+            <p>Exp: {{profile().languages[0].exp}}</p>
+        </div>
 			</div>
 		</div>
 
