--- a/Phase_B/gptalk-frontend/src/app/pages/my-profile/components/profile-languages/profile-languages.component.html
+++ b/Phase_B/gptalk-frontend/src/app/pages/my-profile/components/profile-languages/profile-languages.component.html
@@ -2,7 +2,12 @@
 	<h1>Languages</h1>
 	<div class="content">
 		@for (language of languages(); track language) {
-			<div class="language">
+			<div
+        class="language select-none"
+        pTooltip="Exp: {{language.exp}} <br/>{{language.expToNextRank}} to next rank"
+        tooltipPosition="left"
+        [escape]="false"
+      >
 				<div>
 					<img [src]="languageIconRecord[language.language]" [alt]="language.language" width="50px"/>
 					<p>{{ language.language }}</p>
