Changed autofocus implementation

--- a/Phase_B/gptalk-frontend/src/app/pages/learn/fill-in-the-blank/fill-in-the-blank.component.html
+++ b/Phase_B/gptalk-frontend/src/app/pages/learn/fill-in-the-blank/fill-in-the-blank.component.html
@@ -4,7 +4,8 @@
       #inputField
       class="fill-in-the-blank-input-field text-center"
       autocomplete="off"
-      autofocus
+      pAutoFocus
+      [autofocus]="true"
       type="text"
       id="inputForm"
       title="Input Field"
