--- a/Phase_B/gptalk-frontend/src/app/pages/chat-with-me/chat-with-me.component.scss
+++ b/Phase_B/gptalk-frontend/src/app/pages/chat-with-me/chat-with-me.component.scss
@@ -4,6 +4,18 @@
 	padding: 1.5rem 2.5rem;
 }
 
+::ng-deep.prompt-btn {
+  background: transparent;
+  color: var(--primary-clr);
+  border: var(--primary-clr);
+  font-size: 18px;
+  font-weight: normal;
+}
+
+::ng-deep.prompt-btn:hover {
+  background: #e3e3e3;
+}
+
 .messages-wrapper {
 	height: 100%;
 	max-height: 100%;
