Added tooltip to exp bar

--- a/Phase_B/gptalk-frontend/src/app/pages/learn/exp-bar/exp-bar.component.scss
+++ b/Phase_B/gptalk-frontend/src/app/pages/learn/exp-bar/exp-bar.component.scss
@@ -15,6 +15,10 @@
   }
 }
 
+::ng-deep.p-tooltip {
+  max-width: 400px !important;
+}
+
 .lvl-display-wrapper {
   position: absolute;
   right: 1.5%;
