Fixed incorrect remaining exp calculation

--- a/Phase_B/gptalk-frontend/src/app/pages/learn/exp-bar/exp-bar.component.html
+++ b/Phase_B/gptalk-frontend/src/app/pages/learn/exp-bar/exp-bar.component.html
@@ -1,6 +1,6 @@
 <div
   class="exp-bar-wrapper"
-  pTooltip="Exp: {{totalExp()}} <br/> {{expForNextLevel() - expAtLevelStart()}} more for next level"
+  pTooltip="Exp: {{totalExp()}} <br/> {{expForNextLevel() - totalExp()}} more for next level"
   tooltipPosition="left"
   [escape]="false"
 >
