changed all remaining occurences of isDone to isExerciseDone

--- a/Phase_B/gptalk-frontend/src/app/pages/learn/choose-the-tense/choose-the-tense.component.html
+++ b/Phase_B/gptalk-frontend/src/app/pages/learn/choose-the-tense/choose-the-tense.component.html
@@ -12,7 +12,7 @@
     >
       <p-button
         [styleClass]="
-            isDone() ? (
+            isExerciseDone() ? (
               utilHtml.elemContainsAnswer(choice.value, exerciseData) ? ( isCorrectAnswer() ? 'btn-correct' : 'btn-actual-correct' )
               :
               'btn-incorrect'
@@ -38,7 +38,7 @@
   }
 </div>
 
-@if (isDone()) {
+@if (isExerciseDone()) {
   <div class="translation-wrapper flex-row justify-content-center">
     <p><b>Translation:</b></p>
     <p>{{exerciseData().translation}}</p>
