--- a/Phase_B/gptalk-frontend/src/app/pages/learn/learn.component.html
+++ b/Phase_B/gptalk-frontend/src/app/pages/learn/learn.component.html
@@ -24,14 +24,14 @@
     <!--  Next Button  -->
     <div class="buttons-group p-fluid grid-12 gap-2 mb-3">
       <div class="next-btn-wrapper flex justify-content-end">
-        @if (isDone() && !isLessonOver()) {
+        @if (isExerciseDone() && !isLessonOver()) {
           <p-button id="next-btn" label="Next" severity="primary" autofocus (onClick)="lrn.setUpNextExercise()"/>
         }
       </div>
     </div>
 
     <!--  Exercise-specific instructions -->
-    @if (!isDone()) {
+    @if (!isExerciseDone()) {
       <div class="instructions-wrapper flex justify-content-center">
         <!-- bypassSecurity pipe is used to utilize the string's HTML tags if they exist in the string     -->
         <p [innerHTML]="exerciseData().instructions ? exerciseData().instructions : '' | bypassSecurity "></p>
