--- a/Phase_B/gptalk-frontend/src/app/pages/learn/summarize-the-paragraph/summarize-the-paragraph.component.html
+++ b/Phase_B/gptalk-frontend/src/app/pages/learn/summarize-the-paragraph/summarize-the-paragraph.component.html
@@ -11,7 +11,7 @@
     <div class="col-12">
       <p-button
         [styleClass]="
-            isDone() ? (
+            isExerciseDone() ? (
               utilHtml.elemContainsAnswer(choice, exerciseData) ? ( isCorrectAnswer() ? 'btn-correct' : 'btn-actual-correct' )
               :
               'btn-incorrect'
@@ -26,7 +26,7 @@
   }
 </div>
 
-@if (isDone()) {
+@if (isExerciseDone()) {
   <div class="translation-wrapper flex-row justify-content-center">
     <p><b>Translation:</b></p>
     <p>{{exerciseData().translation}}</p>
