--- a/Phase_B/gptalk-frontend/src/app/pages/learn/translate-word/translate-word.component.html
+++ b/Phase_B/gptalk-frontend/src/app/pages/learn/translate-word/translate-word.component.html
@@ -7,7 +7,7 @@
     <div class="col-12">
       <p-button
         [styleClass]="
-            isDone() ? (
+            isExerciseDone() ? (
               utilHtml.elemContainsAnswer(choice, exerciseData) ? ( isCorrectAnswer() ? 'btn-correct' : 'btn-actual-correct' )
               :
               'btn-incorrect'
