--- a/Phase_B/gptalk-frontend/src/app/pages/learn/summarize-the-paragraph/summarize-the-paragraph.component.html
+++ b/Phase_B/gptalk-frontend/src/app/pages/learn/summarize-the-paragraph/summarize-the-paragraph.component.html
@@ -1,7 +1,7 @@
 <div class="paragraph-wrapper flex justify-content-center gap-3 mb-4"
      [dir]="utilHtml.langDirection(lessonLanguage)"
-     [class.latin-text] = "lessonLanguage() != 'Hebrew'"
-     [class.hebrew-text] = "lessonLanguage() == 'Hebrew'"
+     [class.latin-text] = "lessonLanguage() !== 'Hebrew'"
+     [class.hebrew-text] = "lessonLanguage() === 'Hebrew'"
 >
   <p style="font-size: 24px">{{exerciseData().prompt}} </p>
 </div>
