--- a/Phase_B/gptalk-frontend/src/app/pages/learn/learn.component.scss
+++ b/Phase_B/gptalk-frontend/src/app/pages/learn/learn.component.scss
@@ -12,6 +12,9 @@
   display: flex;
   flex-direction: column;
   gap: 5px;
+
+  height: 91dvh; /* Full viewport height */
+  justify-content: space-between; /* Ensures content is spaced with the button at the bottom */
 }
 
 .heading-wrapper {
@@ -42,16 +45,21 @@
     font-size: 36px;
     word-wrap: break-word;
     text-transform: capitalize;
-
   }
 
   & .next-btn-wrapper {
-    margin-top: 15px;
+    //margin-top: 15px;
     margin-right: 5px;
-    height: 70px;
+    min-height: 70px;
+
+    display: flex;
+    justify-content: flex-end; /* Align button to the right */
+    position: relative;
+    bottom: 0;
+    //max-width: 300px;
 
     & button {
-      width: 300px;
+      width: 20vw;
     }
   }
   & .btn-disabled {
@@ -84,7 +92,5 @@
     border-color: var(--blue-400);
   }
 }
-
-
 
 
