--- a/Phase_B/gptalk-frontend/src/app/pages/learn/match-the-words/match-the-words.component.html
+++ b/Phase_B/gptalk-frontend/src/app/pages/learn/match-the-words/match-the-words.component.html
@@ -27,8 +27,9 @@
       }
     </div>
 
-    @if (isExerciseDone() && penalties()) {
-      <div class="flex flex-column text-center justify-content-center">
+      <div
+        class="flex flex-column text-center justify-content-center"
+        [style.visibility]="isExerciseDone() && penalties() ? 'visible' : 'hidden'"
+      >
         <p>Total incorrect matches: {{penalties()}}</p>
       </div>
-    }
