--- a/Phase_B/gptalk-frontend/src/app/pages/learn/reorder-sentence/reorder-sentence.component.html
+++ b/Phase_B/gptalk-frontend/src/app/pages/learn/reorder-sentence/reorder-sentence.component.html
@@ -1,4 +1,3 @@
-<!--TODO: adjust design to handle longer sentences-->
 <div class="buttons-group h-5rem gap-2 flex justify-content-center mb-4" [dir]="utilHtml.langDirection(lessonLanguage)">
   <!--   Chosen words   -->
   @for (word of chosenWords(); track word; let idx = $index) {
@@ -32,19 +31,22 @@
 </div>
 
 <!--  Submit button  -->
-<div class="buttons-group write-sentence-submit-btn flex justify-content-center">
-  @if (!isExerciseDone()) {
-    <p-button
+  <div class="buttons-group write-sentence-submit-btn flex justify-content-center">
+    @if (!isExerciseDone()) {
+      <p-button
       id="reorderSentenceSubmitBtn"
       label="Submit"
       severity="primary"
       (onClick)="lrn.setExerciseResult(vrf.verifyAnswer(chosenWords().join(' '), exerciseData))"/>
-  }
-</div>
-
-@if (isExerciseDone()) {
-  <div class="translation-wrapper flex flex-column text-center justify-content-center">
-    <p><b>Answer:</b> {{exerciseData().answer}}</p>
-    <p><b>Translation:</b> {{exerciseData().translation}}</p>
+    }
   </div>
-}
+
+  <div
+    class="translation-wrapper flex flex-column text-center justify-content-center"
+    [style.visibility]="isExerciseDone() ? 'visible' : 'hidden'"
+  >
+    <p><b>Answer:</b></p>
+    <p>{{exerciseData().answer}}</p>
+    <p><b>Translation:</b></p>
+    <p>{{exerciseData().translation}}</p>
+  </div>
