--- a/Phase_B/gptalk-frontend/src/app/pages/learn/summarize-the-paragraph/summarize-the-paragraph.component.html
+++ b/Phase_B/gptalk-frontend/src/app/pages/learn/summarize-the-paragraph/summarize-the-paragraph.component.html
@@ -26,9 +26,11 @@
   }
 </div>
 
-@if (isExerciseDone()) {
-  <div class="translation-wrapper flex-row justify-content-center">
+  <div
+    class="translation-wrapper flex-row justify-content-center"
+    [style.visibility]="isExerciseDone() ? 'visible' : 'hidden'"
+  >
     <p><b>Translation:</b></p>
     <p>{{exerciseData().translation}}</p>
   </div>
-}
+
