--- a/Phase_B/gptalk-frontend/src/app/pages/learn/fill-in-the-blank/fill-in-the-blank.component.html
+++ b/Phase_B/gptalk-frontend/src/app/pages/learn/fill-in-the-blank/fill-in-the-blank.component.html
@@ -1,4 +1,4 @@
-  <div class="sentence-wrapper flex flex-wrap gap-3 mb-2" [dir]="utilHtml.langDirection(lessonLanguage)">
+  <div class="sentence-wrapper flex flex-wrap gap-3 mb-2" [class.hebrew-text]="lessonLanguage() === 'Hebrew'">
     <p>{{exerciseData().sentenceBeforeBlank}}</p>
     <input
       #inputField
@@ -42,8 +42,11 @@
   </div>
 
     <div
-      class="translation-wrapper flex justify-content-center"
+      class="translation-wrapper flex flex-column justify-content-center"
       [style.visibility]="isExerciseDone() ? 'visible' : 'hidden'"
     >
-      <p><b>Translation:</b> {{exerciseData().translation}}</p>
+      <p><b>Translation:</b></p>
+      <p [class.hebrew-text]="lessonLanguage() === 'English'">
+        {{exerciseData().translation}}
+      </p>
     </div>
