--- a/Phase_B/gptalk-frontend/src/app/pages/learn/choose-the-tense/choose-the-tense.component.html
+++ b/Phase_B/gptalk-frontend/src/app/pages/learn/choose-the-tense/choose-the-tense.component.html
@@ -1,5 +1,6 @@
-<div class="flex justify-content-center gap-3 mb-4"
-     [dir]="utilHtml.langDirection(lessonLanguage)"
+<div
+  class="flex justify-content-center gap-3 mb-4"
+  [class.hebrew-text]="lessonLanguage() === 'Hebrew'"
 >
   <p style="font-size: 24px">{{exerciseData().question}} </p>
 </div>
@@ -36,6 +37,8 @@
     [style.visibility]="isExerciseDone() ? 'visible' : 'hidden'"
   >
     <p><b>Translation:</b></p>
-    <p>{{exerciseData().translation}}</p>
+    <p [class.hebrew-text]="lessonLanguage() === 'English'">
+      {{exerciseData().translation}}
+    </p>
   </div>
 
